--- a/Languages/English/Keyed/BetterLetters_Keys.xml
+++ b/Languages/English/Keyed/BetterLetters_Keys.xml
@@ -2,4 +2,8 @@
 
 <LanguageData>
   <Dismiss>Dismiss</Dismiss>
+  <OpenLetter>Open</OpenLetter>
+  <Unpin>Unpin</Unpin>
+  <UnpinAndDismiss>Unpin and dismiss</UnpinAndDismiss>
+  <DismissButStayPinned>Dismiss (Keep pinned in Archive)</DismissButStayPinned>
 </LanguageData>
