--- a/Languages/English/Keyed/BetterLetters_Keys.xml
+++ b/Languages/English/Keyed/BetterLetters_Keys.xml
@@ -4,6 +4,6 @@
   <Dismiss>Dismiss</Dismiss>
   <OpenLetter>Open</OpenLetter>
   <Unpin>Unpin</Unpin>
-  <UnpinAndDismiss>Unpin and dismiss</UnpinAndDismiss>
+  <UnpinAndDismiss>Unpin and Dismiss</UnpinAndDismiss>
   <DismissButStayPinned>Dismiss (Keep pinned in Archive)</DismissButStayPinned>
 </LanguageData>
