Jump To targets in reminders

--- a/source/Languages/English/Keyed/BetterLetters_Keys.xml
+++ b/source/Languages/English/Keyed/BetterLetters_Keys.xml
@@ -27,6 +27,8 @@
   <BetterLetters_DecHour>-1 H</BetterLetters_DecHour>
   <BetterLetters_IncDay>+1 D</BetterLetters_IncDay>
   <BetterLetters_IncHour>+1 H</BetterLetters_IncHour>
+  <BetterLetters_JumpToColon>Jump to:</BetterLetters_JumpToColon>
+  <BetterLetters_NothingSelected>Nothing</BetterLetters_NothingSelected>
   <BetterLetters_SnoozedButtonTooltip>Snoozed until {0}.
 Remaining: {1}
 
