--- a/source/Languages/English/Keyed/BetterLetters_Keys.xml
+++ b/source/Languages/English/Keyed/BetterLetters_Keys.xml
@@ -45,7 +45,9 @@ Click to cancel the reminder.</BetterLetters_SnoozedReminderButtonTooltip>
   <BetterLetters_SnoozeQuestTooltip>Snooze this quest until later. If it is pinned it will be unpinned.
   
 You will receive the "Quest available" letter again when the snooze ends. You will still receive notifications related to this quest, unlike dismissing it.</BetterLetters_SnoozeQuestTooltip>
-  <BetterLetters_PlaySettingsCreateReminder>Create a new reminder</BetterLetters_PlaySettingsCreateReminder>
+  <BetterLetters_PlaySettingsCreateReminder>Create a new reminder.
+  
+Currently selected thing(s) can be automatically used as the reminder's "Jump To Location" target.</BetterLetters_PlaySettingsCreateReminder>
   
   <BetterLetters_Reminder>Reminder</BetterLetters_Reminder>
   <BetterLetters_Reminders>Reminders</BetterLetters_Reminders>
