Improved settings screen. New setting for reminder selected target

--- a/source/Languages/English/Keyed/BetterLetters_Keys.xml
+++ b/source/Languages/English/Keyed/BetterLetters_Keys.xml
@@ -69,6 +69,9 @@ Current setting: {0} days</BetterLetters_MaxDurationTooltip>
   <BetterLetters_Settings_Tab_Snoozing>Snoozing</BetterLetters_Settings_Tab_Snoozing>
   <BetterLetters_Settings_Tab_Reminders>Reminders</BetterLetters_Settings_Tab_Reminders>
   <BetterLetters_Settings_SnoozeSettings>Snooze settings</BetterLetters_Settings_SnoozeSettings>
+  <BetterLetters_Settings_DefaultSuffix>
+
+Default: {0}</BetterLetters_Settings_DefaultSuffix>
   
   <BetterLetters_Settings_DisableRightClickPinnedLetters>Disable right click float menu for pinned letters</BetterLetters_Settings_DisableRightClickPinnedLetters>
   <BetterLetters_Settings_DisableRightClickPinnedLetters_Desc>By default, pinned letters replace the vanilla "Right click to delete" functionality with a context menu that has several options including dismissing. Enable this if you want right click to always unpin pinned letters instead.</BetterLetters_Settings_DisableRightClickPinnedLetters_Desc>
@@ -89,16 +92,14 @@ Current setting: {0} days</BetterLetters_MaxDurationTooltip>
   <BetterLetters_Settings_PinTexture_Round>Simple</BetterLetters_Settings_PinTexture_Round>
   <BetterLetters_Settings_PinTexture_Alt>Pushpin</BetterLetters_Settings_PinTexture_Alt>
   <BetterLetters_Settings_TextureInDialogSize>Pinned/snoozed texture size: {0} pixels</BetterLetters_Settings_TextureInDialogSize>
-  <BetterLetters_Settings_TextureInDialogSize_Desc>Size, in pixels, of the texture in the top right of the dialog that opens when you click on a letter.
-Default: {0}</BetterLetters_Settings_TextureInDialogSize_Desc>
+  <BetterLetters_Settings_TextureInDialogSize_Desc>Size, in pixels, of the texture in the top right of the dialog that opens when you click on a letter.</BetterLetters_Settings_TextureInDialogSize_Desc>
   <BetterLetters_Settings_MaxNumSnoozes>Snoozed letters limit: {0}</BetterLetters_Settings_MaxNumSnoozes>
-  <BetterLetters_Settings_MaxNumSnoozes_Desc>The maximum number of letters that are allowed to be snoozed at a time.
-Large numbers of snoozed letters could negatively impact performance a little bit.
-Default: {0}</BetterLetters_Settings_MaxNumSnoozes_Desc>
+  <BetterLetters_Settings_MaxNumSnoozes_Desc>The maximum number of letters that are allowed to be snoozed at a time. Large numbers of snoozed letters could negatively impact performance slightly.
+
+Also includes reminders.</BetterLetters_Settings_MaxNumSnoozes_Desc>
   <BetterLetters_Settings_MaxSnoozeDuration>Max Snooze/Reminder Duration: {0}</BetterLetters_Settings_MaxSnoozeDuration>
   <BetterLetters_Settings_MaxSnoozeDuration_Desc>Determines the longest allowed snooze in the "Snooze for..." dialog. Measured in days.
-Note that letters that are snoozed for a very long time may expire before the snooze finishes.
-Default: {0}</BetterLetters_Settings_MaxSnoozeDuration_Desc>
+Note that letters that are snoozed for a very long time may expire before the snooze finishes.</BetterLetters_Settings_MaxSnoozeDuration_Desc>
   <BetterLetters_Settings_SnoozePinned>Automatically pin snoozed letters</BetterLetters_Settings_SnoozePinned>
   <BetterLetters_Settings_SnoozePinned_Desc>If enabled, when a snoozed letter finishes its snooze timer, the letter will show up already pinned so you're less likely to miss it.</BetterLetters_Settings_SnoozePinned_Desc>
   
@@ -109,4 +110,6 @@ Default: {0}</BetterLetters_Settings_MaxSnoozeDuration_Desc>
   
   <BetterLetters_Settings_DoCreateReminderPlaySetting>Add Create Reminder button to the bottom play controls</BetterLetters_Settings_DoCreateReminderPlaySetting>
   <BetterLetters_Settings_DoCreateReminderPlaySetting_Desc>Adds a button to the bottom left buttons that can be used as a shortcut to create a new reminder.</BetterLetters_Settings_DoCreateReminderPlaySetting_Desc>
+  <BetterLetters_Settings_AutoSelectThingForReminders>Automatically target any selected Things</BetterLetters_Settings_AutoSelectThingForReminders>
+  <BetterLetters_Settings_AutoSelectThingForReminders_Desc>Anything that you have selected when the reminder dialog is opened will be automatically chosen as the "Jump To" target for the reminder by default.</BetterLetters_Settings_AutoSelectThingForReminders_Desc>
 </LanguageData>
